<resources>
    <string name="app_name">Praktyki</string>
    <string name="exit_button">Wyjdź</string>
    <string name="record_button">Nagraj</string>
    <string name="search_button">Szukaj</string>
    <string name="record_title">Record</string>
    <string name="back">Wróć</string>
    <string name="forward">Potwierdź</string>
    <string name="summary">Podsumowanie</string>
    <string name="name">Nazwa:</string>
    <string name="sound_name">Nazwa dzwięku</string>
    <string name="category">Kategorie:</string>
    <string name="time">Czas:</string>
    <string name="cancel">Anuluj</string>
    <string name="microphone">Nagraj</string>
    <string name="accept">Akceptuj</string>
    <string name="next">Akceptuj</string>
    <string name="play">Nagraj</string>
    <string name="start">▶/⏸</string>
    <string name="download">Pobierz</string>
    <string name="Record">Record</string>
    <string name="Search">Search</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="Save">Save</string>
    <string name="hint">Wpisz nazwe pliku na serwerze</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>