<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/record_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="144dp"
            android:layout_height="62dp"
            android:layout_marginTop="20dp"
            android:onClick="runRecord"
            android:text="@string/record_button" />

        <Button
            android:id="@+id/search_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="144dp"

            android:layout_height="62dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:duplicateParentState="false"
            android:onClick="runSearch"
            android:text="@string/search_button" />
    </LinearLayout>

    <Button
        android:id="@+id/exit_button"
        android:layout_width="265dp"
        android:layout_height="108dp"
        android:text="@string/exit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>